# whatdopeopledoallday.us

./: .gitignore  README.rst
docs/: conf.py  exploration.rst  index.rst
notebooks/: activity_file_exp_1.ipynb  pyproject.toml  summary_file_exploration_1.ipynb
