[tool.poetry]
name = "wdpdad-nb"
version = "0.1.0"
description = ""
authors = ["V David Zvenyach <dave@esq.io>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.8"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
